5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4330/executions/1764_674.log
== TEST (2019-05-21 16:01:55) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:11:01) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#menor elemento do vetor
print(min(v))
#maior elemento do vetor 
print(max(v))
#soma dos elementos do vetor
print(sum[v])
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(sum(v)/size(notas),2))

-- EXECUTION TIME:
0.407929
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/674/main.py", line 14, in <module>
    print(sum[v])
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:11:03) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#menor elemento do vetor
print(min(v))
#maior elemento do vetor 
print(max(v))
#soma dos elementos do vetor
print(sum[v])
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(sum(v)/size(notas),2))

-- EXECUTION TIME:
0.382239
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/674/main.py", line 14, in <module>
    print(sum[v])
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:11:03) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#menor elemento do vetor
print(min(v))
#maior elemento do vetor 
print(max(v))
#soma dos elementos do vetor
print(sum[v])
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(sum(v)/size(notas),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:11:38) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum[v])
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(sum(v)/size(notas),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:12:03) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum[v])
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(sum(v)/size(notas),2))

-- EXECUTION TIME:
0.503773
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/674/main.py", line 14, in <module>
    print(sum[v])
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:12:04) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum[v])
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(sum(v)/size(notas),2))

-- EXECUTION TIME:
0.292096
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/674/main.py", line 14, in <module>
    print(sum[v])
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:12:04) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum[v])
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(sum(v)/size(notas),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:12:05) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum[v])
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(sum(v)/size(notas),2))

-- EXECUTION TIME:
0.533383
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/674/main.py", line 14, in <module>
    print(sum[v])
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:12:06) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum[v])
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(sum(v)/size(notas),2))

-- EXECUTION TIME:
0.57205
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/674/main.py", line 14, in <module>
    print(sum[v])
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:12:06) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum[v])
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(sum(v)/size(notas),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:12:20) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum[v])
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(sum(v)/size(v),2))

-- EXECUTION TIME:
0.423078
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/674/main.py", line 14, in <module>
    print(sum[v])
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:12:22) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum[v])
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(sum(v)/size(v),2))

-- EXECUTION TIME:
0.454623
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/674/main.py", line 14, in <module>
    print(sum[v])
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:12:23) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum[v])
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(sum(v)/size(v),2))

-- EXECUTION TIME:
0.52915
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/674/main.py", line 14, in <module>
    print(sum[v])
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:12:24) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum[v])
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(sum(v)/size(v),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:12:42) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum[v])
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(sum(v)/(size)(v),2))

-- EXECUTION TIME:
0.354304
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/674/main.py", line 14, in <module>
    print(sum[v])
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:12:44) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum[v])
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(sum(v)/(size)(v),2))

-- EXECUTION TIME:
0.456786
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/674/main.py", line 14, in <module>
    print(sum[v])
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:13:34) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum[v])
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(sum(v)/(size)(v),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:13:46) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum[v])
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(sum(v)/(size)(v),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:13:47) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum[v])
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(sum(v)/(size)(v),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:14:44) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum([v])
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(sum(v)/(size)(v),2))

-- EXECUTION TIME:
0.147519
-- ERROR:
  File "/home/codebench/codes/1764/674/main.py", line 16
    print(round(sum(v)/(size)(v),2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:14:45) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum([v])
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(sum(v)/(size)(v),2))

-- EXECUTION TIME:
0.218206
-- ERROR:
  File "/home/codebench/codes/1764/674/main.py", line 16
    print(round(sum(v)/(size)(v),2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:14:45) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum([v])
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(sum(v)/(size)(v),2))

-- EXECUTION TIME:
0.111438
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1764/674/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:14:46) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum([v])
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(sum(v)/(size)(v),2))

-- ERROR:
File "XXXX", line 16
    print(round(sum(v)/(size)(v),2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:34:33) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum([v])
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(mean(v),2))

-- EXECUTION TIME:
0.222603
-- ERROR:
  File "/home/codebench/codes/1764/674/main.py", line 16
    print(round(mean(v),2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:34:34) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum([v])
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(mean(v),2))

-- ERROR:
File "XXXX", line 16
    print(round(mean(v),2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:35:32) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum([v])
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(mean(v,2))

-- EXECUTION TIME:
0.139484
-- ERROR:
  File "/home/codebench/codes/1764/674/main.py", line 16
    print(round(mean(v,2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:35:33) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum([v])
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(mean(v,2))

-- EXECUTION TIME:
0.200586
-- ERROR:
  File "/home/codebench/codes/1764/674/main.py", line 16
    print(round(mean(v,2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:35:33) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum([v])
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(mean(v,2))

-- ERROR:
File "XXXX", line 16
    print(round(mean(v,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:35:34) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum([v])
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(mean(v,2))

-- ERROR:
File "XXXX", line 16
    print(round(mean(v,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:35:55) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum([v])
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(mean(v,2)))

-- EXECUTION TIME:
0.227058
-- ERROR:
  File "/home/codebench/codes/1764/674/main.py", line 16
    print(round(mean(v,2)))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:35:56) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum([v])
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(mean(v,2)))

-- EXECUTION TIME:
0.149989
-- ERROR:
  File "/home/codebench/codes/1764/674/main.py", line 16
    print(round(mean(v,2)))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:35:56) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum([v])
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(mean(v,2)))

-- ERROR:
File "XXXX", line 16
    print(round(mean(v,2)))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:35:57) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum([v])
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(mean(v,2)))

-- ERROR:
File "XXXX", line 16
    print(round(mean(v,2)))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:35:57) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum([v])
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(mean(v,2)))

-- ERROR:
File "XXXX", line 16
    print(round(mean(v,2)))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:35:57) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum([v])
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(mean(v,2)))

-- ERROR:
File "XXXX", line 16
    print(round(mean(v,2)))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:35:58) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum([v])
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(mean(v,2)))

-- ERROR:
File "XXXX", line 16
    print(round(mean(v,2)))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:36:13) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum([v])
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(mean(v,2)))

-- ERROR:
File "XXXX", line 16
    print(round(mean(v,2)))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:36:14) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum([v])
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(mean(v,2)))

-- EXECUTION TIME:
0.155348
-- ERROR:
  File "/home/codebench/codes/1764/674/main.py", line 16
    print(round(mean(v,2)))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:36:35) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum(v)
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(mean(v,2)))

-- EXECUTION TIME:
0.200456
-- ERROR:
  File "/home/codebench/codes/1764/674/main.py", line 16
    print(round(mean(v,2)))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:36:37) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum(v)
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(mean(v,2)))

-- ERROR:
File "XXXX", line 16
    print(round(mean(v,2)))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:39:45) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum(v)
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(mean(v),2))

-- EXECUTION TIME:
0.197823
-- ERROR:
  File "/home/codebench/codes/1764/674/main.py", line 16
    print(round(mean(v),2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:39:46) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum(v)
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(mean(v),2))

-- ERROR:
File "XXXX", line 16
    print(round(mean(v),2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:39:51) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum(v)
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(mean(v),2)))

-- EXECUTION TIME:
0.198343
-- ERROR:
  File "/home/codebench/codes/1764/674/main.py", line 16
    print(round(mean(v),2)))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:39:52) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum(v)
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(mean(v),2)))

-- EXECUTION TIME:
0.179834
-- ERROR:
  File "/home/codebench/codes/1764/674/main.py", line 16
    print(round(mean(v),2)))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:39:53) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum(v)
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(mean(v),2)))

-- EXECUTION TIME:
0.147838
-- ERROR:
  File "/home/codebench/codes/1764/674/main.py", line 16
    print(round(mean(v),2)))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:39:53) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum(v)
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(mean(v),2)))

-- EXECUTION TIME:
0.106384
-- ERROR:
  File "/home/codebench/codes/1764/674/main.py", line 16
    print(round(mean(v),2)))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:39:53) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum(v)
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(mean(v),2)))

-- EXECUTION TIME:
0.174963
-- ERROR:
  File "/home/codebench/codes/1764/674/main.py", line 16
    print(round(mean(v),2)))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:39:53) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum(v)
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(mean(v),2)))

-- ERROR:
File "XXXX", line 16
    print(round(mean(v),2)))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:39:54) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum(v)
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(mean(v),2)))

-- ERROR:
File "XXXX", line 16
    print(round(mean(v),2)))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:39:55) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum(v)
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(mean(v),2)))

-- ERROR:
File "XXXX", line 16
    print(round(mean(v),2)))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:39:55) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum(v)
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(mean(v),2)))

-- ERROR:
File "XXXX", line 16
    print(round(mean(v),2)))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:39:55) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum(v)
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(mean(v),2)))

-- ERROR:
File "XXXX", line 16
    print(round(mean(v),2)))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:39:56) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum(v)
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(mean(v),2)))

-- ERROR:
File "XXXX", line 16
    print(round(mean(v),2)))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:39:56) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum(v)
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(mean(v),2)))

-- ERROR:
File "XXXX", line 16
    print(round(mean(v),2)))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:39:56) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum(v)
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(mean(v),2)))

-- ERROR:
File "XXXX", line 16
    print(round(mean(v),2)))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:39:56) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum(v)
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(mean(v),2)))

-- ERROR:
File "XXXX", line 16
    print(round(mean(v),2)))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:39:57) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum(v)
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(mean(v),2)))

-- ERROR:
File "XXXX", line 16
    print(round(mean(v),2)))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:39:57) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum(v)
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(mean(v),2)))

-- ERROR:
File "XXXX", line 16
    print(round(mean(v),2)))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:39:57) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum(v)
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(mean(v),2)))

-- ERROR:
File "XXXX", line 16
    print(round(mean(v),2)))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:40:19) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum(v)
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(mean(v),2))

-- ERROR:
File "XXXX", line 16
    print(round(mean(v),2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:40:50) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum(v))
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(mean(v),2))

-- EXECUTION TIME:
0.497053
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
13
7
20
1
937
10.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:40:51) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum(v))
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(mean(v),2))

-- EXECUTION TIME:
0.408169
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
13
7
20
1
937
10.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:25:54) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum(v))
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(mean(v),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:26:08) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum(v))
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(mean(v),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:26:30) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum(v))
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(mean(v),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:45:42) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum(v))
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(mean(v),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:45:44) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum(v))
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(mean(v),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:45:45) 
-- CODE:
from numpy import*
v=array(eval(input("insira o valor do vetor: ")))
#quantidadede elementos do vetor
print(size(v))
#primeiro elemento do vetor
print(v[0])
#ultimo elemento do vetor
print(v[-1])
#maior elemento do vetor
print(max(v))
#menor elemento do vetor 
print(min(v))
#soma dos elementos do vetor
print(sum(v))
#media aritmética dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(mean(v),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
